--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,11 @@ datastorePreferences = "1.0.0"
 # security
 securityCrypto = "1.1.0-alpha06"
 
+#fhir
+android-fhir = "1.3.0"
+desugar = "2.0.4"
+
+
 
 # Room DB
 room = "2.7.1"
@@ -93,6 +98,11 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 
 # security
 androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
+
+#fhir
+android-fhir-engine = { module = "com.google.android.fhir:engine", version = "1.2.0" }
+android-fhir-sdc = { module = "com.google.android.fhir:data-capture", version = "1.3.0" }
+desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
 
 
 # Test
