--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.UgandaEMRMobile"
         android:name="com.lyecdevelopers.ugandaemrmobile.UgandaEMRMobile"
         tools:targetApi="31">
