--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ coreKtx = "1.16.0"
 # Compose
 composeBom = "2025.05.01"
 activityCompose = "1.10.1"
+icons = "1.6.1"
+
 
 # AndroidX
 appcompat = "1.7.0"
@@ -33,6 +35,10 @@ securityCrypto = "1.1.0-alpha06"
 android-fhir = "1.3.0"
 desugar = "2.0.4"
 
+# fragments
+androidx-fragment = "1.6.2"
+navigation = "2.7.7"
+
 
 
 # Room DB
@@ -41,6 +47,9 @@ room = "2.7.1"
 # Image Loading
 coil = "2.7.0"
 
+# logging
+timber = "5.0.1"
+
 # Test
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -48,6 +57,8 @@ espressoCore = "3.6.1"
 appcompatVersion = "1.7.0"
 material = "1.12.0"
 datastorePreferencesCoreAndroid = "1.1.7"
+constraintlayout = "2.2.1"
+androidxAppcompat = "1.7.1"
 
 [libraries]
 # Core
@@ -66,7 +77,13 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "composeBom" }
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icons" }
+
+# fragments
+
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
+navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
 
 
 # Navigation
@@ -104,6 +121,9 @@ android-fhir-engine = { module = "com.google.android.fhir:engine", version = "1.
 android-fhir-sdc = { module = "com.google.android.fhir:data-capture", version = "1.3.0" }
 desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
 
+# logging
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
 
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -112,6 +132,8 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompatVersion" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-datastore-preferences-core-android = { group = "androidx.datastore", name = "datastore-preferences-core-android", version.ref = "datastorePreferencesCoreAndroid" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
