--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,7 +40,6 @@ androidx-fragment = "1.6.2"
 navigation = "2.7.7"
 
 
-
 # Room DB
 room = "2.7.1"
 
@@ -49,6 +48,10 @@ coil = "2.7.0"
 
 # logging
 timber = "5.0.1"
+
+coreSplashscreen = "1.0.1"
+
+
 
 # Test
 junit = "4.13.2"
@@ -123,6 +126,9 @@ desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", ver
 
 # logging
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+# splash screen
+splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 
 
 # Test
