--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,13 +36,19 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle-
 
       - name: Build and run tests
-        run: ./gradlew clean assembleDebug testDebugUnitTest connectedDebugAndroidTest --stacktrace
+        run: ./gradlew clean assembleDebug assembleRelease testDebugUnitTest connectedDebugAndroidTest --stacktrace
 
-      - name: Upload APK artifact
+      - name: Upload Debug APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: UgandaEMR-Mobile-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload Release APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: UgandaEMR-Mobile-release-apk
+          path: app/build/outputs/apk/release/app-release.apk
 
       - name: Auto-tag new version
         if: github.ref == 'refs/heads/main'
@@ -86,5 +92,8 @@ jobs:
           tag_name: ${{ steps.get_tag.outputs.tag }}
           name: Release ${{ steps.get_tag.outputs.tag }}
           body: ${{ env.RELEASE_NOTES }}
+          files: |
+            app/build/outputs/apk/debug/app-debug.apk
+            app/build/outputs/apk/release/app-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
