--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,8 +35,17 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-
 
-      - name: Build and run tests
-        run: ./gradlew clean assembleDebug assembleRelease testDebugUnitTest connectedDebugAndroidTest --stacktrace
+      - name: Build and run unit tests
+        run: ./gradlew clean assembleDebug assembleRelease testDebugUnitTest --stacktrace
+
+      - name: Run Instrumented Tests on Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          target: google_apis
+          arch: x86_64
+          profile: pixel
+          script: ./gradlew connectedDebugAndroidTest
 
       - name: Upload Debug APK artifact
         uses: actions/upload-artifact@v4
