--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # full history for versioning
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -48,12 +48,6 @@ jobs:
             echo "has_tests=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Restart ADB (safety net)
-        if: steps.check_android_test.outputs.has_tests == 'true'
-        run: |
-          adb kill-server || true
-          adb start-server || true
-
       - name: Run Instrumented Tests on Emulator
         if: steps.check_android_test.outputs.has_tests == 'true'
         uses: reactivecircus/android-emulator-runner@v2
@@ -62,10 +56,11 @@ jobs:
           target: google_apis
           arch: x86_64
           profile: pixel
-          script: ./gradlew connectedDebugAndroidTest --no-daemon
-          emulator-options: "-no-snapshot-save -no-boot-anim -accel on"
+          script: ./gradlew connectedDebugAndroidTest --no-daemon || echo "::warning::Instrumented tests failed"
+          wait-for-emulator: true
           disable-animations: true
           show-logs: true
+          emulator-options: "-no-snapshot-save -no-boot-anim -accel on"
 
       - name: Upload Debug APK artifact
         uses: actions/upload-artifact@v4
@@ -85,15 +80,12 @@ jobs:
           git fetch --tags
           LATEST_TAG=$(git describe --tags --abbrev=0 || echo "v0.0.0")
           echo "Latest tag: $LATEST_TAG"
-
           VERSION_PARTS=(${LATEST_TAG//./ })
           MAJOR=${VERSION_PARTS[0]#v}
           MINOR=${VERSION_PARTS[1]}
           PATCH=${VERSION_PARTS[2]}
-
           NEW_PATCH=$((PATCH + 1))
           NEW_VERSION="v${MAJOR}.${MINOR}.${NEW_PATCH}"
-
           echo "New version: $NEW_VERSION"
           git config user.name "github-actions"
           git config user.email "actions@github.com"
