--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,7 +44,6 @@ jobs:
           if find . -type f -path "*/src/androidTest/*Test.kt" | grep -q .; then
             echo "has_tests=true" >> $GITHUB_OUTPUT
           else
-            echo "No instrumented tests found."
             echo "has_tests=false" >> $GITHUB_OUTPUT
           fi
 
@@ -62,10 +61,20 @@ jobs:
           script: |
             echo "Waiting for emulator to boot..."
             boot_completed="0"
-            until [ "$boot_completed" = "1" ]; do
+            export PATH=$ANDROID_SDK_ROOT/platform-tools:$PATH
+            timeout=60
+            count=0
+            while [ "$boot_completed" != "1" ] && [ $count -lt $timeout ]; do
               boot_completed=$(adb shell getprop sys.boot_completed 2>/dev/null | tr -d '\r')
               sleep 5
+              count=$((count + 1))
             done
+
+            if [ "$boot_completed" != "1" ]; then
+              echo "::error::Emulator failed to boot in time."
+              exit 1
+            fi
+
             echo "Emulator booted. Running instrumented tests..."
             ./gradlew connectedDebugAndroidTest --no-daemon || echo "::warning::Instrumented tests failed"
 
