--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,47 +1,49 @@
 [versions]
 # Build tools
-agp = "8.10.1"
-kotlin = "2.1.20"
-ksp = "2.1.20-2.0.1"
+agp = "8.11.0"
+firebaseBom = "33.15.0"
+kotlin = "2.2.0"
+ksp = "2.1.21-2.0.1"
 coreKtx = "1.16.0"
+googleServices = "4.4.2"
+crashlytics = "3.0.4"
 
 # Compose
-composeBom = "2025.05.01"
+composeBom = "2025.06.01"
 activityCompose = "1.10.1"
-icons = "1.6.1"
+icons = "1.7.8"
 
 
 # AndroidX
-appcompat = "1.7.0"
-lifecycleRuntimeKtx = "2.9.0"
+lifecycleRuntimeKtx = "2.9.1"
 hiltNavigationCompose = "1.2.0"
 
 # Hilt DI
-hilt = "2.56.1"
-hiltCompiler = "2.56.1"
+hilt = "2.56.2"
 
 # Networking & Serialization
-retrofit = "2.11.0"
+retrofit = "3.0.0"
 okhttp = "4.12.0"
-moshi = "1.15.1"
+moshi = "1.15.2"
 
 # Preferences DataStore
-datastorePreferences = "1.0.0"
+datastorePreferences = "1.1.7"
 
 # security
-securityCrypto = "1.1.0-alpha06"
+securityCrypto = "1.1.0-beta01"
 
 #fhir
-android-fhir = "1.3.0"
-desugar = "2.0.4"
+androidFhirEngine = "1.2.0"
+androidFhirSdc = "1.3.0"
+desugar = "2.1.5"
 
 # fragments
-androidx-fragment = "1.6.2"
-navigation = "2.7.7"
+androidx-fragment = "1.8.8"
+navigation = "2.9.0"
 
 
 # Room DB
-room = "2.7.1"
+room = "2.7.2"
 
 # Image Loading
 coil = "2.7.0"
@@ -57,11 +59,10 @@ coreSplashscreen = "1.0.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-appcompatVersion = "1.7.0"
+appcompatVersion = "1.7.1"
 material = "1.12.0"
 datastorePreferencesCoreAndroid = "1.1.7"
 constraintlayout = "2.2.1"
-androidxAppcompat = "1.7.1"
 pagingCommonAndroid = "3.3.6"
 
 [libraries]
@@ -86,7 +87,6 @@ androidx-paging-common-android = { group = "androidx.paging", name = "paging-com
 
 
 # fragments
-
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
 navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
@@ -97,7 +97,7 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 
 # Dependency Injection
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltCompiler" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 
 # Networking / JSON
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -124,8 +124,8 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 
 #fhir
-android-fhir-engine = { module = "com.google.android.fhir:engine", version = "1.2.0" }
-android-fhir-sdc = { module = "com.google.android.fhir:data-capture", version = "1.3.0" }
+android-fhir-engine = { module = "com.google.android.fhir:engine", version.ref = "androidFhirEngine" }
+android-fhir-sdc = { module = "com.google.android.fhir:data-capture", version.ref = "androidFhirSdc" }
 desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar" }
 
 # logging
@@ -133,6 +133,12 @@ timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 # splash screen
 splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+
+
+# firebase
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 
 
 # Test
@@ -143,7 +149,6 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-datastore-preferences-core-android = { group = "androidx.datastore", name = "datastore-preferences-core-android", version.ref = "datastorePreferencesCoreAndroid" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -152,3 +157,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics" }
