--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build and run unit tests
         run: ./gradlew clean assembleDebug assembleRelease testDebugUnitTest --no-daemon --stacktrace
 
-      - name: Debug: Show APK files
+      - name: Debug Show APK files
         run: ls -R app/build/outputs/apk
 
       - name: Upload Debug APK artifact
