--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,14 +62,13 @@ jobs:
           name: UgandaEMR-Mobile-release-apk
           path: app/build/outputs/apk/release/app-release-unsigned.apk
 
-
   release:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
     outputs:
-      tag: ${{ steps.get_tag.outputs.tag }}
+      tag: ${{ steps.auto_tag.outputs.tag }}
 
     steps:
       - name: Checkout repository
@@ -88,26 +87,40 @@ jobs:
           path: app/build/outputs/apk/release
 
       - name: Auto-tag new version
+        id: auto_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git describe --tags --abbrev=0 || echo "v0.0.0")
+          LATEST_TAG=$(git tag --sort=-v:refname | head -n 1)
+          if [ -z "$LATEST_TAG" ]; then
+            LATEST_TAG="v0.0.0"
+          fi
           echo "Latest tag: $LATEST_TAG"
+
           VERSION_PARTS=(${LATEST_TAG//./ })
           MAJOR=${VERSION_PARTS[0]#v}
           MINOR=${VERSION_PARTS[1]}
           PATCH=${VERSION_PARTS[2]}
+
           NEW_PATCH=$((PATCH + 1))
           NEW_VERSION="v${MAJOR}.${MINOR}.${NEW_PATCH}"
+
           echo "New version: $NEW_VERSION"
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git tag $NEW_VERSION
-          git push origin $NEW_VERSION
+
+          if git rev-parse "$NEW_VERSION" >/dev/null 2>&1; then
+            echo "Tag $NEW_VERSION already exists! Skipping..."
+            echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          else
+            git config user.name "github-actions"
+            git config user.email "actions@github.com"
+            git tag $NEW_VERSION
+            git push origin $NEW_VERSION
+            echo "tag=$NEW_VERSION" >> $GITHUB_OUTPUT
+          fi
 
       - name: Generate release notes
         run: |
           git fetch --tags
-          LATEST_TAG=$(git describe --tags --abbrev=0)
+          LATEST_TAG=$(git tag --sort=-v:refname | head -n 1)
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
           git log ${LATEST_TAG}..HEAD --pretty=format:"- %s" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -116,7 +129,7 @@ jobs:
         id: get_tag
         run: |
           git fetch --tags
-          TAG=$(git describe --tags --abbrev=0)
+          TAG=$(git tag --sort=-v:refname | head -n 1)
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
       - name: Upload Release APK to Firebase App Distribution
