--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -161,15 +161,20 @@ jobs:
           ls -l app/build/outputs/apk/debug/app-debug.apk
           ls -l app/build/outputs/apk/release/app-release-unsigned.apk
 
-      - name: Upload Release APK to Firebase App Distribution
+      - name: Write Firebase service account key
+        run: |
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/firebase-key.json
+
+      - name: Upload to Firebase App Distribution using Service Account
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{ secrets.FIREBASE_APP_ID }}
-          token: ${{ secrets.FIREBASE_CREDENTIALS }}
-          groups: internal-testers
-          file: app/build/outputs/apk/release/app-release-unsigned.apk
-          releaseNotes: |
-            Automated build from GitHub Actions
+            appId: ${{ secrets.FIREBASE_APP_ID }}
+            serviceCredentialsFile: $HOME/firebase-key.json
+            groups: internal-testers
+            file: app/build/outputs/apk/release/app-release-unsigned.apk
+            releaseNotes: |
+                Automated build from GitHub Actions with Service Account
+
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
