--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -161,19 +161,15 @@ jobs:
           ls -l app/build/outputs/apk/debug/app-debug.apk
           ls -l app/build/outputs/apk/release/app-release-unsigned.apk
 
-      - name: Write Firebase Service Account JSON
-        run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/firebase-key.json
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
 
-      - name: Upload Release APK to Firebase App Distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-          appId: ${{ secrets.FIREBASE_APP_ID }}
-          serviceCredentialsFile: $HOME/firebase-key.json
-          groups: internal-testers
-          file: app/build/outputs/apk/release/app-release-unsigned.apk
-          releaseNotes: |
-              Automated build from GitHub Actions with Service Account
+      - name: Upload using Firebase CLI
+        run: |
+          firebase appdistribution:distribute app/build/outputs/apk/release/app-release-unsigned.apk \
+          --app ${{ secrets.FIREBASE_APP_ID }} \
+          --groups internal-testers \
+          --release-notes "Automated build from GitHub Actions"
         env:
           GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
 
