--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -161,18 +161,24 @@ jobs:
           ls -l app/build/outputs/apk/debug/app-debug.apk
           ls -l app/build/outputs/apk/release/app-release-unsigned.apk
 
+      # ✅ 1️⃣ Decode JSON key
+      - name: Write Firebase Service Account JSON
+        run: |
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/firebase-key.json
+
+      # ✅ 2️⃣ Install Firebase CLI
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Upload using Firebase CLI
+      # ✅ 3️⃣ Upload release using Firebase CLI
+      - name: Upload Release APK to Firebase App Distribution
         run: |
           firebase appdistribution:distribute app/build/outputs/apk/release/app-release-unsigned.apk \
-          --app ${{ secrets.FIREBASE_APP_ID }} \
-          --groups internal-testers \
-          --release-notes "Automated build from GitHub Actions"
+            --app ${{ secrets.FIREBASE_APP_ID }} \
+            --groups internal-testers \
+            --release-notes "Automated build from GitHub Actions with Service Account"
         env:
           GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
-
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
