--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,6 +44,10 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle-
 
+      - name: Write google-services.json
+        run: |
+              echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+      
       - name: Build and run unit tests
         run: ./gradlew clean assembleDebug assembleRelease testDebugUnitTest --no-daemon --stacktrace
 
