--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -125,15 +125,11 @@ jobs:
           git log ${LATEST_TAG}..HEAD --pretty=format:"- %s" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      # ✅ Write Firebase Service Account JSON
-      - name: Write Firebase Service Account JSON
-        run: echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > $HOME/firebase-key.json
-
       # ✅ Install firebase-tools globally
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      # ✅ Upload APK using firebase-tools CLI + Service Account
+      # ✅ Upload APK using firebase-tools CLI + Firebase Token
       - name: Upload Release APK to Firebase App Distribution
         run: |
           firebase appdistribution:distribute app/build/outputs/apk/release/app-release-unsigned.apk \
@@ -141,7 +137,7 @@ jobs:
             --groups internal-testers \
             --release-notes "Automated build from GitHub Actions with Service Account"
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
