--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Decode keystore and add signing configs
         run: |
           mkdir -p keystore
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > /app/keystore/release.jks
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/keystore/release.jks
           echo "KEYSTORE_FILE=keystore/release.jks" >> local.properties
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> local.properties
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> local.properties
