feat: add Firebase Crashlytics
This commit introduces Firebase Crashlytics for enhanced crash reporting and analysis.

The following changes were made:
- Added Firebase Crashlytics dependencies to all relevant modules (`app`, `auth`, `core`, `form`, `main`, `settings`, `sync`, `worklist`).
- Updated the `libs.versions.toml` file to include the Crashlytics library.
- Enabled Crashlytics logging in `AppLogger.kt` to send crash reports and logs to Firebase.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -138,8 +138,7 @@ splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "core
 # firebase
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
