--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 agp = "8.11.0"
 firebaseBom = "33.16.0"
 kotlin = "2.2.0"
+
 ksp = "2.2.0-2.0.2"
 coreKtx = "1.16.0"
 googleServices = "4.4.3"
@@ -24,6 +25,8 @@ hilt = "2.56.2"
 # worker manager
 hilt-work = "1.2.0"
 workmanager = "2.10.2"
+startup-runtime = "1.1.1"
+
 
 # Networking & Serialization
 retrofit = "3.0.0"
@@ -150,8 +153,11 @@ firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 
 # work manager
 hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hilt-work" }
-hilt-work-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-work" }
+hilt-work-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-work" }
+work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workmanager" }
 work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workmanager" }
+androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startup-runtime" }
+
 
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
